2010-07-12  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.cpp (start_element): More validity-check
	fixes.

2010-07-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Each XamlContext should create a gchandle on the
	xaml loader so it doesn't get free'd while we are parsing
	templates.

2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Update.

2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Enable the reverse-pinvoke-exceptions debug option.

2010-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* brush.cpp: Fix crash on a BitmapSource (e.g. WriteableBitmap)
	in DRT641 (like similar change on media.cpp)

2010-07-12  Alan McGovern  <amcgovern@novell.com>

	* pal/gtk/im-gtk.cpp: Nuke
	  Helper.ReportException/PluginInstance::ReportException.
	  They're only used in debug builds and they cause DRTs to
	  fail. As they don't really have much of a use anymore,
	  remove them. Fixes drt 357.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/windowless-gtk.cpp: MoonWindowlessGtk::HandleEvent: null out
	button.device. Fixes a crash with #282.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* textbox.cpp:
	* richtextbox.cpp: SetIsAttached: don't do anything if the attached value
	doesn't change. Fixes a crash where we attach to events on the surface more
	than once (SetIsAttached (true) called several times), but only remove them
	once (when SetIsAttached (false)) is called.

2010-07-10  David Reveman  <davidr@novell.com>

	* uielement.cpp: Use effect_padding.

	* frameworkelement.cpp:
	* uielement.cpp: No need to check UIElement::RENDER_PROJECTION
	flag when computing bounds.

	* frameworkelement.cpp:
	* uielement.cpp:
	* rect.cpp:
	* rect.h: Add Rect::Transform (double *projection).

	* frameworkelement.cpp (ComputeGlobalBounds):
	* uielement.cpp:
	* uielement.h: Add effect_padding to UIElement class.

	* frameworkelement.cpp:
	* uielement.cpp:
	* effect.cpp: